--- a/index.html
+++ b/index.html
@@ -2,69 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"></script>
-    
-    <link rel="stylesheet" href="">
-    <script defer src="./index.js"></script>
-    <title>Pomodoro Clock</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"></script>
+
+  <link rel="stylesheet" href="./style.css">
+  <script defer src="./index.js"></script>
+  <title>Pomodoro Clock</title>
 </head>
 
 <body>
-    <h1 class="text-muted text-center">25 + 5 Clock
-      </h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-              <div class="card text-center">
-                <div class="card-body">
-                  <h5 class="card-title" id="break-label">Break Length</h5>
-                  <div class="countre_container">
-                    <button id="break-decrement" value='' class="btn btn-primary" data-action="break-decrement">-</button><span id="break-length">5</span>
-                    <button id="break-increment" value="" class="btn btn-primary" data-action="break-increment">+</button>
-                </div>         
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card text-center">
-                <div class="card-body">
-                  <h5 class="card-title" id="session-label">Session Length</h5>
-                  <div class="countre_container">
-                    <button id="session-decrement" class="btn btn-primary" data-action="session-decrement">-</button><span id="session-length">25</span>
-                    <button id="session-increment" class="btn btn-primary" data-action="session-increment">+</button>
-                </div>
-                  </div>
-              </div>
+  <h1 class="text-muted text-center">25 + 5 Clock
+  </h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card text-center">
+          <div class="card-body">
+            <h5 class="card-title count" id="break-label">Break Length</h5>
+            <div class="countre_container">
+              <button id="break-decrement" value='' class="btn btn-primary"
+                data-action="break-decrement">-</button><span id="break-length">5</span>
+              <button id="break-increment" value="" class="btn btn-primary" data-action="break-increment">+</button>
             </div>
           </div>
-          <div class="card text-center">
-            <div class="card-header">
-              Featured
-            </div>
-            <div class="card-body">
-              <h5 class="card-title" id="timer-label">Session</h5>
-              <p class="card-text" id="time-left">
-                <span id="js-minutes">25</span>
-                <span class="separator">:</span>
-                <span id="js-seconds">00</span>
-              </p>
-              <button class="btn btn-primary" id="start_stop" data-action="start">play</button>
-              <button class="btn btn-primary" id="reset" data-action="reset">reset</button>
-
-            </div>
-            <div class="card-footer hidden" >
-              <audio id="beep" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3" data-sound="pomodoro"></audio>
-              <audio id="" src="" data-sound="shortBreak"></audio>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card text-center">
+          <div class="card-body">
+            <h5 class="card-title count" id="session-label">Session Length</h5>
+            <div class="countre_container">
+              <button id="session-decrement" class="btn btn-primary" data-action="session-decrement">-</button><span
+                id="session-length">25</span>
+              <button id="session-increment" class="btn btn-primary" data-action="session-increment">+</button>
             </div>
           </div>
+        </div>
+      </div>
     </div>
+    <div class="card text-center">
+
+      <div class="card-body">
+        <h5 class="card-title" id="timer-label">Session</h5>
+        <p class="card-text" id="time-left">
+          <span id="js-minutes" class="time">25</span>
+          <span class="separator">:</span>
+          <span id="js-seconds" class="time">00</span>
+        </p>
+        <div class="clock_btn">
+          <button class="btn btn-primary clock" id="start_stop" data-action="start">play</button>
+          <button class="btn btn-primary clock" id="reset" data-action="reset">reset</button>
+        </div>
+      </div>
+
+      <audio id="beep" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3" data-sound="pomodoro"></audio>
+      <audio id="" src="" data-sound="shortBreak"></audio>
+
+    </div>
+  </div>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
 </html>
